--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,10 +22,10 @@
 </head>
 <body>
   <div class="vertical-center">
-    <h1>Anais was here</h1>
+    <h1>Sample Node application for Test</h1>
     <img src="https://cdn.worldvectorlogo.com/logos/docker.svg" />
-    <h2>Sparta Docker containerised the image successfully with full automation!</h2>
-    
+    <h2>Docker container deployed using full automation!</h2>
+
   </div>
 </body>
 </html>
