Changed contents od index file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,9 +22,9 @@
 </head>
 <body>
   <div class="vertical-center">
-    <h1>Sample Node application for Test</h1>
+    <h1>NodeJS App Started</h1>
     <img src="https://cdn.worldvectorlogo.com/logos/docker.svg" />
-    <h2>Docker container deployed using full automation!</h2>
+    <h2>Docker containerised the image successfully with full automation!</h2>
 
   </div>
 </body>
