--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div class="vertical-center">
-    <h1>NodeJS App Started</h1>
+    <h1>NodeJS App Started on Docker</h1>
     <img src="https://cdn.worldvectorlogo.com/logos/docker.svg" />
     <h2>Docker containerised the image successfully with full automation!</h2>
 
